Fixed some Apfloat deprecated methods